// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`clients > registry > getImageTagManifest > success 1`] = `
[
  [
    "https://localhost:5000/v2/modelId/image/manifests/tag1",
    {
      "agent": "mock agent",
      "headers": {
        "Authorization": "Bearer token",
      },
    },
  ],
]
`;

exports[`clients > registry > getRegistryLayerStream > success 1`] = `
[
  [
    "https://localhost:5000/v2/modelId/image/blobs/sha256:digest1",
    {
      "agent": "mock agent",
      "headers": {
        "Authorization": "Bearer token",
      },
    },
  ],
]
`;

exports[`clients > registry > listImageTags > success 1`] = `
[
  [
    "https://localhost:5000/v2/modelId/image/tags/list",
    {
      "agent": "mock agent",
      "headers": {
        "Authorization": "Bearer token",
      },
    },
  ],
]
`;

exports[`clients > registry > listModelRepos > only returns model repos 1`] = `
[
  [
    "https://localhost:5000/v2/_catalog?n=100&last=modelId",
    {
      "agent": "mock agent",
      "headers": {
        "Authorization": "Bearer token",
      },
    },
  ],
]
`;
